# leptos-csr-tailwind

./: .gitignore  Cargo.toml  README.md  Trunk.toml  hello-sh  index.html  netlify.toml  package.json  rust-toolchain.toml  tailwind.config.js
crates/leptos-cms/: Cargo.toml
crates/leptos-cms/src/: lib.rs
crates/leptos-tw-ui/: Cargo.toml
crates/leptos-tw-ui/src/: lib.rs
crates/leptos-tw-ui/src/components/: container.rs  footer.rs  icons.rs  mod.rs  typography.rs
crates/leptos-tw-ui/src/components/buttons/: button.rs
crates/leptos-tw-ui/src/components/menu/: bars.rs
crates/leptos-tw-ui/src/components/theme/: toggle.rs
site/: Cargo.toml  index.html
site/src/: app.rs  main.rs  theme.rs
site/src/components/: icons.rs
site/src/pages/: counter.rs  example.rs  home.rs  mod.rs
src/: app.rs  main.rs
src/components/: header.rs  icons.rs  mod.rs
src/components/buttons/: button.rs
src/components/theme/: mod.rs  toggle.rs
src/components/variants/: base.rs
src/pages/: counter.rs  home.rs  mod.rs
