[package]
name = "leptos-tw-site"
version = { workspace = true }
edition = "2021"

[dependencies]
console_error_panic_hook = { version = "0.1" }
console_log = { version = "1" }
leptos = { version = "0.5.0", features = ["csr", "nightly"] }
leptos-tw-ui.workspace = true
leptos_meta = { version = "0.5.0", features = ["csr", "nightly"] }
leptos_router = { version = "0.5.0", features = ["csr", "nightly"] }
log = "0.4.20"
wasm-bindgen = "0.2.87"
web-sys = { version = "0.3.64" }
