[package]
name = "leptos-tw-ui"
version = { workspace = true }
edition = "2021"

[dependencies]
leptos = { version = "0.5.0", features = ["csr", "nightly"] }
wasm-bindgen = "0.2.87"
web-sys = { version = "0.3.64", features = [
    "Window",
    "HtmlElement",
    "Document",
    "Storage",
    "MediaQueryList",
] }
